--- a/.env
+++ b/.env
@@ -1,8 +1,14 @@
-#MINIO
-MINIO_ROOT_USER = admin
-MINIO_ROOT_PASSWORD = admin123
+# ---------- MINIO ----------
+MINIO_ENDPOINT=http://minio:9000
+MINIO_ACCESS_KEY=admin
+MINIO_SECRET_KEY=admin123
+BUCKET_NAME=sales-datalake
+FILE_NAME=sales_data_sample.csv
 
-#POSTGRES
-PG_USER = admin
-PG_PASS = admin123
-PG_DB = dwh
+# ---------- POSTGRES ----------
+PG_USER=admin
+PG_PASSWORD=admin123
+PG_HOST=localhost
+PG_PORT=5433
+PG_DB=dwh
+TABLE_NAME=sales
