--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ FILE_NAME=sales_data_sample.csv
 # ---------- POSTGRES ----------
 PG_USER=admin
 PG_PASSWORD=admin123
-PG_HOST=localhost
-PG_PORT=5433
+PG_HOST=postgres
+PG_PORT=5432
 PG_DB=dwh
 TABLE_NAME=sales
