--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ PG_HOST=postgres
 PG_PORT=5432
 PG_DB=dwh
 TABLE_NAME=sales
+
+_AIRFLOW_WWW_USER_USERNAME=admin
+_AIRFLOW_WWW_USER_PASSWORD=admin123
