--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,11 @@ dependencies = [
     "python-dotenv==1.0.1"
 ]
 
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["dags"]  # Указываем, что пакет находится в папке etl_pipeline/
+
 [tool.uv]
