--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ x-airflow-common: &airflow-common
     dockerfile: Dockerfile
   environment: &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${PG_USER:-airflow}:${PG_PASSWORD:-airflow}@postgres/${PG_DB:-airflow}
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${PG_USER}:${PG_PASSWORD}@postgres/${PG_DB}
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
@@ -18,6 +18,8 @@ x-airflow-common: &airflow-common
   user: "${AIRFLOW_UID:-50000}:${AIRFLOW_GID:-50000}"
   depends_on:
     postgres:
+      condition: service_healthy
+    minio:
       condition: service_healthy
 services:
   minio:
@@ -46,7 +48,7 @@ services:
       POSTGRES_PASSWORD: ${PG_PASSWORD}
       POSTGRES_DB: ${PG_DB}
     ports:
-      - "5432:5432"
+      - "5433:5432"
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U ${PG_USER} -d ${PG_DB}']
       interval: 10s
@@ -57,6 +59,8 @@ services:
 
   airflow-webserver:
     <<: *airflow-common
+    env_file:
+      - .env
     container_name: airflow_webserver
     command: webserver
     ports:
@@ -72,14 +76,23 @@ services:
 
   airflow-scheduler:
     <<: *airflow-common
+    env_file:
+      - .env
     container_name: airflow-scheduler
     command: scheduler
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 10s
+      retries: 5
     restart: on-failure
     networks:
       - airflow-network
 
   airflow-init:
     <<: *airflow-common
+    env_file:
+      - .env
     container_name: airflow-init
     entrypoint: ["/bin/bash", "-c"]
     command: >
@@ -93,6 +106,11 @@ services:
         --email admin@example.com
     environment:
       <<: *airflow-common-env
+      MINIO_ENDPOINT: ${MINIO_ENDPOINT}
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      BUCKET_NAME: ${BUCKET_NAME}
+      FILE_NAME: ${FILE_NAME}
       _AIRFLOW_DB_UPGRADE: true
     networks:
       - airflow-network
