--- a/.env
+++ b/.env
@@ -1,17 +1,12 @@
-# ---------- MINIO ----------
-MINIO_ENDPOINT=http://minio:9000
-MINIO_ACCESS_KEY=admin
-MINIO_SECRET_KEY=admin123
-BUCKET_NAME=sales-datalake
-FILE_NAME=sales_data_sample.csv
-
-# ---------- POSTGRES ----------
-PG_USER=admin
-PG_PASSWORD=admin123
+PG_USER=airflow
+PG_PASSWORD=airflow
+PG_DB=airflow
 PG_HOST=postgres
-PG_PORT=5433
-PG_DB=dwh
-TABLE_NAME=sales
-
-_AIRFLOW_WWW_USER_USERNAME=admin
-_AIRFLOW_WWW_USER_PASSWORD=admin123
+PG_PORT=5432
+MINIO_ACCESS_KEY=minioadmin
+MINIO_SECRET_KEY=minioadmin
+AIRFLOW_ADMIN_USER=admin
+AIRFLOW_ADMIN_PASSWORD=admin
+AIRFLOW_FERNET_KEY=EORrsUETMGfSrzejxhXukJ7FhuOwZch-S7l-pfDDRSA=
+AIRFLOW_UID=50000
+AIRFLOW_GID=50000
