--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas==2.2.2
-psycopg2-binary==2.9.9
-boto3==1.34.131
-pyarrow==16.1.0
-fastparquet==2024.5.0
-python-dotenv==1.0.1
+pandas
+requests
+psycopg2-binary
+python-dotenv
+fastparquet
+pyarrow
+boto3
