--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -344,64 +344,32 @@ services:
         start_period: 30s
       restart: always
 
-  superset-redis:
-    image: redis:7-alpine
-    restart: always
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - all_in_one
 
   superset:
-    image: apache/superset:latest
-    ports:
-      - "8088:8088"
+    container_name: superset
+    build:
+      context: ./superset_dockerfile
+      dockerfile: Dockerfile
     environment:
-      - SUPERSET_SECRET_KEY=your-superset-secret-key-change-this-in-production
-      - DATABASE_DB=superset
-      - DATABASE_USER=superset
-      - DATABASE_PASSWORD=superset
-      - DATABASE_HOST=postgres  # используем существующий postgres сервис
-      - DATABASE_PORT=5432
-      - REDIS_HOST=superset-redis
-      - REDIS_PORT=6379
-      - FLASK_ENV=development
-    depends_on:
-      postgres:
-        condition: service_healthy
+      ADMIN_USERNAME: ${SUPERSET_ADMIN_USERNAME}
+      ADMIN_EMAIL: ${SUPERSET_ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${SUPERSET_ADMIN_PASSWORD}
     volumes:
-      - superset_data:/app/superset_home
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8088/api/v1/version"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 60s
-    restart: always
-
-  superset-init:
-    image: apache/superset:latest
-    profiles: ["init"]
-    environment:
-      - SUPERSET_SECRET_KEY=your-superset-secret-key-change-this-in-production
-      - DATABASE_DB=superset
-      - DATABASE_USER=superset
-      - DATABASE_PASSWORD=superset
-      - DATABASE_HOST=postgres  # используем существующий postgres сервис
-      - DATABASE_PORT=5432
+      - ./superset_data:/app/superset_home
+    ports:
+      - '8088:8088'
     depends_on:
-      postgres:
-        condition: service_healthy
-    command: >
-      sh -c "
-        until pg_isready -h postgres -p 5432; do echo 'Waiting for PostgreSQL...'; sleep 2; done;
-        superset fab create-admin \
-          --username admin \
-          --firstname Admin \
-          --lastname User \
-          --email admin@example.com \
-          --password admin &&
-        superset db upgrade &&
-        superset init
-      "
+      - postgres
+    networks:
+      - all_in_one
 
 volumes:
   postgres-db-volume:
   minio-storage:
-  superset_data:
