--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -356,12 +356,13 @@ services:
       restart: always
 
   superset:
-    image: apache/superset:latest
+    build:
+      context: ./superset
     container_name: superset
     env_file: .env
     environment:
       SUPERSET_SECRET_KEY: ${SUPERSET_SECRET_KEY:-this_is_not_a_secure_key}
-      SUPERSET_DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/superset
+      SUPERSET_DATABASE_URI: postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/superset
     ports:
       - "8088:8088"
     volumes:
@@ -380,12 +381,13 @@ services:
     restart: always
 
   superset-init:
-    image: apache/superset:latest
+    build:
+      context: ./superset
     container_name: superset-init
     env_file: .env
     environment:
       SUPERSET_SECRET_KEY: ${SUPERSET_SECRET_KEY:-this_is_not_a_secure_key}
-      SUPERSET_DATABASE_URL: postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/superset
+      SUPERSET_DATABASE_URI: postgresql+psycopg2://${POSTGRES_USER:-airflow}:${POSTGRES_PASSWORD:-airflow}@postgres/superset
       SUPERSET_ADMIN_USERNAME: ${SUPERSET_ADMIN_USERNAME:-admin}
       SUPERSET_ADMIN_PASSWORD: ${SUPERSET_ADMIN_PASSWORD:-admin}
     command: >
