working version superset!!!

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -355,6 +355,24 @@ services:
         start_period: 30s
       restart: always
 
+  superset:
+    container_name: superset
+    build:
+      context: ./superset
+      dockerfile: Dockerfile
+    environment:
+      ADMIN_USERNAME: ${SUPERSET_ADMIN_USERNAME}
+      ADMIN_EMAIL: ${SUPERSET_ADMIN_EMAIL}
+      ADMIN_PASSWORD: ${SUPERSET_ADMIN_PASSWORD}
+    volumes:
+      - ./superset_data:/app/superset_home
+      - ./superset/requirements-local.txt:/app/requirements-local.txt
+    ports:
+      - '8088:8088'
+    depends_on:
+      - postgres
+    command: ["/bin/bash", "-c", "superset db upgrade && superset init && superset run -p 8088 -h 0.0.0.0"]
+
 volumes:
   postgres-db-volume:
   minio-storage:
